--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>F.R.I.D.A.Y.</title>
   <link rel="stylesheet" href="semantic/dist/semantic.min.css">
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -86,12 +86,25 @@
   </div>
 
 </body>
-<script src="jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+<script>
+  if('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(function(registro) {
+          console.log(`Service Worker está registrado corretamente,  ${registro.scope}`);
+        })
+        .catch(function(erro) {
+          console.log(`Erro ao registrar Service Worker,  ${erro}`);
+        });
+    });
+  };
+</script>
+<script src="js/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
-<script src="moment.min.js" type="text/javascript"></script>
-<script src="moment-locale-pt-br.js"></script>
+<script src="js/moment.min.js" type="text/javascript"></script>
+<script src="js/moment-locale-pt-br.js"></script>
 <script src="semantic/dist/semantic.min.js"></script>
-<script src="artyom.window.min.js"></script>
+<script src="js/artyom.window.min.js"></script>
 <script src="app-compiled.js"></script>
 
 </html>
