--- a/index.html
+++ b/index.html
@@ -8,34 +8,134 @@
   <meta name="theme-color" content="#1abc9c">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>F.R.I.D.A.Y.</title>
-  <link rel="shortcut icon" href="img/brain16x16.png">
+  <link rel="shortcut icon" href="img/.png">
   <link rel="stylesheet" href="semantic/dist/semantic.min.css">
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
-  <section id="content">
-    <!-- Botao de Configurações -->
-    <button onclick="abrirModal()" id="config" class="ui inverted basic icon circular button">
-      <i class="cog icon"></i>
-    </button>
+  <!-- Menu -->
+  <div class="ui large top fixed hidden menu">
+    <div class="ui container">
+      <a class="active item" href="#inicio">Ínicio</a>
+      <a class="item" href="#dicas">Dicas</a>
+      <a class="item" href="#configuracoes">Configurações</a>
+      <a class="item" href="#sobre">Sobre</a>
+      <div class="right item">
+        <a class="ui basic" href="https://github.com/DarlanCaruso/artyom-friday/" target="_blank">GitHub</a>
+      </div>
+    </div>
+  </div>
 
-    <!-- Local onde o texto será exibido -->
-    <div class="container">
-      <span id="texto">Me pergunte algo...</span>
+  <!-- Sidebar Menu -->
+  <div class="ui vertical inverted sidebar menu">
+    <a class="active item" href="#inicio">Ínicio</a>
+    <a class="item" href="#dicas">Dicas</a>
+    <a class="item" href="#configuracoes">Configurações</a>
+    <a class="item" href="#sobre">Sobre</a>
+    <a class="item" href="https://github.com/DarlanCaruso/artyom-friday/" target="_blank">GitHub</a>
+  </div>
+
+
+  <!-- Contentudo -->
+  <div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment">
+
+      <div class="ui container">
+        <div class="ui large secondary inverted pointing menu">
+          <a class="toc item">
+            <i class="sidebar icon"></i>
+          </a>
+          <a class="active item" href="#inicio">Ínicio</a>
+          <a class="item" href="#dicas">Dicas</a>
+          <a class="item" href="#configuracoes">Configurações</a>
+          <a class="item" href="#sobre">Sobre</a>
+          <div class="right item">
+            <a class="ui inverted button" href="https://github.com/DarlanCaruso/artyom-friday/" target="_blank">GitHub</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Programa -->
+      <div class="ui text container" id="#inicio">
+        <h1 class="ui inverted header">
+          Diga algo ou digite
+        </h1>
+        <h2>Você pode enviar comando por voz ou digita-lo abaixo para o agente executar.</h2>
+        <div class="ui small right labeled fluid left icon input">
+          <i class="volume up icon"></i>
+          <input type="text" placeholder="Digite a instrução, por exemplo: 'Bom dia'" id="texto">
+          <a class="ui grey label">
+            Enviar
+          </a>
+        </div>
+      </div>
     </div>
 
-    <!-- Caixa Modal de Configurações -->
-    <div class="ui modal">
-      <!-- Titulo -->
-      <div class="header">Configurações</div>
-      <!-- Conteudo -->
-      <div class="content">
+    <!-- Dicas -->
+    <section class="dicas seccao" id="#dicas">
+      <h1 class="ui header centered grid titulo">
+        <div class="content">
+          Dicas
+          <div class="sub header">Veja o que o programa pode fazer:</div>
+        </div>
+      </h1>
+      <div class="ui padded text fluid container segment justified">
+        <h2 class="ui header">
+          <div class="content">
+            Saudações
+            <div class="sub header">Você pode conversar com o agente.</div>
+          </div>
+        </h2>
+        <p>Digite ou fale comandos como: "Bom dia", "Olá", "Oi" ou "Tudo bem?" para que o agente converse com você.</p>
+      </div>
+
+      <div class="ui padded text fluid container segment">
+        <h2 class="ui header">
+          <div class="content">
+            Data e hora
+            <div class="sub header">Você pode pergutar a data e a hora atual.</div>
+          </div>
+        </h2>
+        <p>Digite ou fale comandos como: "Que horas são?" ou "Que dia é hoje?" para que o agente informe o dia ou a hora.</p>
+      </div>
+
+      <div class="ui padded text fluid container segment">
+        <h2 class="ui header">
+          <div class="content">
+            Páginas da Web
+            <div class="sub header">Você pode abrir as principais redes sociais.</div>
+          </div>
+        </h2>
+        <p>Digite ou fale o comando: "Abra meu
+          <strong>...</strong>" e informe a rede social para que o agente abra a respectiva página para você.
+          <em>O agente abre atualmente o Google, Facebook, Instagram e Twitter.</em>
+        </p>
+      </div>
+    </section>
+
+    <div class="ui section divider"></div>
+
+    <!-- Configurações -->
+    <section class="configuracoes seccao" id="configuracoes">
+      <h1 class="ui header centered grid titulo">
+        <div class="content">
+          Configurações
+          <div class="sub header">Configure algumas informações</div>
+        </div>
+      </h1>
+
+      <div class="ui padded text fluid container segment">
+        <h2 class="ui header">
+          <div class="content">
+            Velocidade de Fala
+            <div class="sub header">Ajuste a velocidade da fala do agente.</div>
+          </div>
+        </h2>
         <!-- Alterar Idioma -->
         <form class="ui form">
           <div class="field">
-            <label>Velocidade de fala</label>
             <select class="ui fluid dropdown">
               <option value="">Velocidade</option>
               <option value="0.25">0.25</option>
@@ -48,21 +148,73 @@
             </select>
           </div>
         </form>
+        <!-- Botoes de Ação -->
+        <div class="actions">
+          <button class="ui basic grey fluid button">
+            Alterar
+          </button>
+        </div>
       </div>
-      <!-- Botoes de Ação -->
-      <div class="actions">
-        <div class="ui approve inverted green button" onclick="salvarConfig()">Salvar</div>
-        <div class="ui cancel inverted red button">Cancelar</div>
+    </section>
+
+    <div class="ui section divider"></div>
+
+    <!-- Sobre -->
+    <section class="sobre seccao" id="sobre">
+      <h2 class="ui header centered titulo">
+        <div class="content">
+          Sobre
+          <div class="sub header">Sobre este projeto</div>
+        </div>
+      </h2>
+
+      <div class="ui padded text fluid container segment">
+        <p>Este projeto foi desenvolvido para a discipina de
+          <strong>Inteligência Artificial e Computacional</strong> no curso de
+          <strong>Ciência da Computação</strong> do Centro Universitário Anhnaguera de Niterói - UNIAN. Foi consumida neste programa
+          a API
+          <a href="https://sdkcarlos.github.io/sites/artyom.html" target="_blank">Artyom.js</a> onde a mesma faz união de duas outras APIs nativas de alguns navegadores:
+          <em>speechSynsthesis</em> e
+          <em>webkitSpeechRecognition</em>. Desenvolvido por
+          <a href="http://github.com/DarlanCaruso" target="_blank">Darlan Caruso</a>, código fonte para consulta disponível neste
+          <a href="https://github.com/DarlanCaruso/artyom-friday/"
+            target="_blank">link</a>.
+        </p>
+        <p>
+          <strong>Skills:</strong> HTML, CSS, JavaScript, jQuery, Semantic UI, Babel, Node e PWA.</p>
+      </div>
+    </section>
+
+    <!-- Rodape -->
+    <div class="ui inverted vertical footer segment">
+      <div class="ui container">
+        <div class="ui stackable inverted divided equal height stackable grid">
+          <div class="three wide column">
+            <h4 class="ui inverted header">About</h4>
+            <div class="ui inverted link list">
+              <a href="#" class="item">Sitemap</a>
+              <a href="#" class="item">Contact Us</a>
+              <a href="#" class="item">Religious Ceremonies</a>
+              <a href="#" class="item">Gazebo Plans</a>
+            </div>
+          </div>
+          <div class="three wide column">
+            <h4 class="ui inverted header">Services</h4>
+            <div class="ui inverted link list">
+              <a href="#" class="item">Banana Pre-Order</a>
+              <a href="#" class="item">DNA FAQ</a>
+              <a href="#" class="item">How To Access</a>
+              <a href="#" class="item">Favorite X-Men</a>
+            </div>
+          </div>
+          <div class="seven wide column">
+            <h4 class="ui inverted header">Footer Header</h4>
+            <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          </div>
+        </div>
       </div>
     </div>
-  </section>
-  <footer class="rodape">
-    <div>Icons made by
-      <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
-      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
-      <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-    </div>
-  </footer>
+  </div>
 </body>
 <script>
   if ('serviceWorker' in navigator) {
@@ -83,5 +235,22 @@
 <script src="semantic/dist/semantic.min.js"></script>
 <script src="js/artyom.window.min.js"></script>
 <script src="app-compiled.js"></script>
+<script>
+  $(document)
+    .ready(function () {
+      $('.masthead')
+        .visibility({
+          once: false,
+          onBottomPassed: function () {
+            $('.fixed.menu').transition('fade in');
+          },
+          onBottomPassedReverse: function () {
+            $('.fixed.menu').transition('fade out');
+          }
+        });
+      $('.ui.sidebar')
+        .sidebar('attach events', '.toc.item');
+    });
+</script>
 
 </html>
