--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
       </div>
 
       <!-- Programa -->
-      <div class="ui text container" id="#inicio">
+      <div class="ui text container" id="inicio">
         <h1 class="ui inverted header">
           Diga algo ou digite
         </h1>
         <h2>Você pode enviar comando por voz ou digita-lo abaixo para o agente executar.</h2>
         <div class="ui small right labeled fluid left icon input">
           <i class="volume up icon"></i>
-          <input type="text" placeholder="Digite a instrução, por exemplo: 'Bom dia'" id="texto">
-          <a class="ui grey label">
+          <input type="text" placeholder="Digite a instrução, por exemplo: 'Bom dia'" value="Olá, como posso ajudar?" id="texto">
+          <a class="ui grey label" onclick="enviaComando()">
             Enviar
           </a>
         </div>
@@ -74,7 +74,7 @@
     </div>
 
     <!-- Dicas -->
-    <section class="dicas seccao" id="#dicas">
+    <section class="dicas seccao" id="dicas">
       <h1 class="ui header centered grid titulo">
         <div class="content">
           Dicas
@@ -136,7 +136,7 @@
         <!-- Alterar Idioma -->
         <form class="ui form">
           <div class="field">
-            <select class="ui fluid dropdown">
+            <select id="velocidade" class="ui fluid dropdown">
               <option value="">Velocidade</option>
               <option value="0.25">0.25</option>
               <option value="0.5">0.5</option>
@@ -150,7 +150,7 @@
         </form>
         <!-- Botoes de Ação -->
         <div class="actions">
-          <button class="ui basic grey fluid button">
+          <button class="ui basic grey fluid button" id="configArtyom" onclick="configureArtyom()">
             Alterar
           </button>
         </div>
@@ -177,8 +177,7 @@
           <em>speechSynsthesis</em> e
           <em>webkitSpeechRecognition</em>. Desenvolvido por
           <a href="http://github.com/DarlanCaruso" target="_blank">Darlan Caruso</a>, código fonte para consulta disponível neste
-          <a href="https://github.com/DarlanCaruso/artyom-friday/"
-            target="_blank">link</a>.
+          <a href="https://github.com/DarlanCaruso/artyom-friday/" target="_blank">link</a>.
         </p>
         <p>
           <strong>Skills:</strong> HTML, CSS, JavaScript, jQuery, Semantic UI, Babel, Node e PWA.</p>
@@ -215,6 +214,13 @@
       </div>
     </div>
   </div>
+
+  <!-- Dimmer -->
+  <div class="ui page dimmer">
+    <div class="content">
+      <h1>Velocidade alterada.</h1>
+    </div>
+  </div>
 </body>
 <script>
   if ('serviceWorker' in navigator) {
@@ -230,6 +236,7 @@
   };
 </script>
 <script src="js/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="js/jquery.easing.min.js"></script>
 <script src="js/moment.min.js" type="text/javascript"></script>
 <script src="js/moment-locale-pt-br.js"></script>
 <script src="semantic/dist/semantic.min.js"></script>
